metadata/objects/Business__c.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Number__c</fullName>
        <displayFormat>BN-{0}</displayFormat>
        <label>Business Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>The type of food business.</description>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Food Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The primary email address of the business.</description>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Employee_Identification_Number__c</fullName>
        <label>Employee Identification Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Manhattan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brooklyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staten Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Businesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>